# secure96_examples

./: README.md
privwrite/: CMakeLists.txt  README.md  main.c
s96util/: CMakeLists.txt  README.md  atecc508a.c  atecc508a_config.c  atsha204a.c  atsha204a_config.c  main.c
s96util/include/: atecc508a.h  atsha204a.h  common.h  config.h
s96util/keys/: priv11.pem  priv13.pem  priv15.pem
verify/: CMakeLists.txt  README.md  main.c
